--- a/templates/index.html
+++ b/templates/index.html
@@ -81,9 +81,14 @@
           <h1>Login!</h1>
           </a>
         </div>
-        <div class='right'>
+        <div class='right1'>
           <a href="{% url 'users:signup' %}">  
           <h1>Sign up!</h1>
+          </a>
+        </div>
+        <div class='right2'>
+          <a href="{% url 'users:logout' %}">  
+          <h1>LOGOUT</h1>
           </a>
         </div>
     </div>
