--- a/static/main.css
+++ b/static/main.css
@@ -385,7 +385,7 @@
 body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: cener;
   align-items: center;
 }
 
@@ -394,7 +394,10 @@ body {
   background: #ffe16e;
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin-top: 50px;
+  margin-bottom: 0px; 
+  margin-left: 0px;
+  margin-right: 0px;
   padding: 0;
 }
 
@@ -405,4 +408,139 @@ body {
   position: relative;
 }
 
+:root {
+  --bgColor: #3a3a3a;
+  --hoverBg: #616161;
+  --text: #bbb;
+}
 
+.container {
+  width: clamp(0px, 100%, 700px);
+  margin: 64px auto;
+  text-align: center;
+}
+
+.label {
+  width: 100%;
+  height: 100%;
+  margin: 0px auto;
+  cursor: pointer;
+  background-color: var(--bgColor);
+}
+
+.inner {
+  width: 100%;
+  height: 100%;
+  margin: 64px auto;
+  border-radius: 8px;
+  font-size: 32px;
+  line-height: 300px;
+  background-color: var(--bgColor);
+  color: var(--text);
+}
+
+@media (any-hover: hover){
+  .inner:hover{
+    background-color: var(--hoverBg);
+  }
+}
+
+.label--hover{
+  background-color: var(--hoverBg);
+}
+
+.preview-title{
+  font-size: 32px;
+  margin-bottom: 8px;
+}
+
+.preview {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 32px;
+  padding: 32px;
+  margin-bottom: 16px;
+  border-radius: 8px;
+  align-items: center;
+  background-color: var(--bgColor);
+}
+
+.embed-img{
+  width: 100%;
+  height: 256px;
+  object-position: center;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.photobox{
+  width: 100%;
+  height: 90%;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+}
+
+.leftbox{
+  align-items: center;
+  margin-left: 100px;
+}
+
+.rightbox{
+  margin-top: 30px;
+  width: 800px;
+  float: right;
+  margin-right: 100px;
+  flex-direction: column;
+}
+
+@keyframes sheen {
+  0% {
+    transform: skewY(-45deg) translateX(0);
+  }
+  100% {
+    transform: skewY(-45deg) translateX(12.5em);
+  }
+}
+.wrapper {
+  display: block;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.button {
+  padding: 0.75em 2em;
+  text-align: center;
+  text-decoration: none;
+  color: #F5832C;
+  border: 2px solid #F5832C;
+  font-size: 24px;
+  display: inline-block;
+  border-radius: 0.3em;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  overflow: hidden;
+}
+.button:before {
+  content: "";
+  background-color: rgba(255, 255, 255, 0.5);
+  height: 100%;
+  width: 3em;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -4.5em;
+  transform: skewX(-45deg) translateX(0);
+  transition: none;
+}
+.button:hover {
+  background-color: #F5832C;
+  color: #fff;
+  border-bottom: 4px solid #F5832C;
+}
+.button:hover:before {
+  transform: skewX(-45deg) translateX(13.5em);
+  transition: all 0.5s ease-in-out;
+}
