--- a/static/main.css
+++ b/static/main.css
@@ -476,9 +476,10 @@ body {
 .photobox{
   width: 100%;
   height: 90%;
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
   text-align: center;
+  justify-content: center;
 }
 
 .leftbox{
@@ -489,8 +490,7 @@ body {
 .rightbox{
   margin-top: 30px;
   width: 800px;
-  float: right;
-  margin-right: 100px;
+  margin-left: 150px;
   flex-direction: column;
 }
 
