--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'main.css' %}" />
   </head>
-  <body>
+  <body style="width:100%; overflow-x:hidden; overflow-y:hidden;">
     <div class="dog">
       <div class="dog-body">
         <div class="dog-tail">
