--- a/static/main.css
+++ b/static/main.css
@@ -385,6 +385,7 @@
 
 html,
 body {
+  font-family: "Open Sans", "sans-serif";
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -393,10 +394,11 @@ body {
   width: 100%;
   height: 100%;
   margin-top: 70px;
-  margin-bottom: 0px; 
+  margin-bottom: 0px;
   margin-left: 0px;
   margin-right: 0px;
   padding: 0;
+  font-family: "Dongle", sans-serif;
 }
 
 *,
@@ -424,6 +426,7 @@ body {
   margin-bottom: 100px;
   cursor: pointer;
   background-color: var(--bgColor);
+  border-radius: 20px;
 }
 
 .inner {
@@ -431,39 +434,23 @@ body {
   height: 100%;
   margin: 64px auto;
   border-radius: 8px;
-  font-size: 32px;
+  font-size: 50px;
   line-height: 30px;
   background-color: var(--bgColor);
   color: var(--text);
 }
 
-@media (any-hover: hover){
-  .inner:hover{
+@media (any-hover: hover) {
+  .inner:hover {
     background-color: var(--hoverBg);
   }
 }
 
-.label--hover{
+.label--hover {
   background-color: var(--hoverBg);
 }
 
-.preview-title{
-  font-size: 32px;
-  margin-bottom: 8px;
-}
-
-.preview {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 32px;
-  padding: 32px;
-  margin-bottom: 16px;
-  border-radius: 8px;
-  align-items: center;
-  background-color: var(--bgColor);
-}
-
-.embed-img{
+.embed-img {
   width: 100%;
   height: 256px;
   object-position: center;
@@ -471,7 +458,7 @@ body {
   border-radius: 8px;
 }
 
-.photobox{
+.photobox {
   width: 100%;
   height: 90%;
   display: inline-flex;
@@ -480,13 +467,13 @@ body {
   justify-content: center;
 }
 
-.leftbox{
+.leftbox {
   align-items: center;
   margin-left: 100px;
   margin-top: 50px;
 }
 
-.rightbox{
+.rightbox {
   margin-top: 10px;
   width: 800px;
   margin-left: 100px;
@@ -507,14 +494,15 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 50px;
 }
 
 .button {
   padding: 0.75em 2em;
   text-align: center;
   text-decoration: none;
-  color: #F5832C;
-  border: 2px solid #F5832C;
+  color: #f5832c;
+  border: 2px solid #f5832c;
   font-size: 24px;
   display: inline-block;
   border-radius: 0.3em;
@@ -535,14 +523,28 @@ body {
   transition: none;
 }
 .button:hover {
-  background-color: #F5832C;
+  background-color: #f5832c;
   color: #fff;
-  border-bottom: 4px solid #F5832C;
+  border-bottom: 4px solid #f5832c;
 }
 .button:hover:before {
   transform: skewX(-45deg) translateX(13.5em);
   transition: all 0.5s ease-in-out;
 }
-.label-container{
-  
+.label-container {
+  top: 10%;
+  width: 100%;
+  font-size: 30px;
+}
+#dog_image {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#dog_image:hover {
+  opacity: 0.7;
 }
