--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,9 @@
     {% load static %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap CSS -->
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Dongle&display=swap");
+    </style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -293,7 +296,7 @@
           ) {
             labelContainer.childNodes[0].innerHTML =
               "<strong>저먼 셰퍼드</strong><br><br>🐕저먼 셰퍼드는 독일에서 목양견의 목적으로 개량된 개의 한 품종이며, 전세계에서 경찰견, 군견등으로 활약하고 있다. 원산지는 독일이며, 독일의 국견으로 알려져 있다. 자국 내에서는 ‘엘세이션(Alsation)’이라고도 한다.";
-          }else if (
+          } else if (
             prediction[34].className == "차우차우" &&
             prediction[34].probability.toFixed(2) >= 0.7
           ) {
@@ -354,58 +357,54 @@
             labelContainer.childNodes[0].innerHTML =
               "<strong>푸들</strong><br><br>🐕푸들은 야생물새 사냥에 활용되던 견종으로 충성심이 깊기로 유명한 견종이다. 곱슬곱슬한 털이 돌돌 말리거나 매듭처럼 꼬인 형태로 덮여있다. 학습 능력이 뛰어나 훈련시키기 쉬워 반려견으로 매우 적합하다.";
           } else {
-            labelContainer.childNodes[0].innerHTML = "<strong>🐕미학습 강아지 입니다🐕</strong>"
+            labelContainer.childNodes[0].innerHTML =
+              "<strong>🐕미학습 강아지 입니다🐕</strong>";
           }
-          // for (let i = 0; i < maxPredictions; i++) {
-          //     const classPrediction =
-          //         prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-          //     labelContainer.childNodes[i].innerHTML = classPrediction;
-          // }
         }
       </script>
-        <div class="leftbox">
-          <form
-            method="post"
-            action="{% url 'post:upload' %}"
-            enctype="multipart/form-data"
-          >
-            {% csrf_token %}
-            <main class="container">
-              <label class="label" id="label" for="input">
-                <div class="inner" id="inner">이미지파일</div>
-              </label>
-              <input
-                name="img"
-                id="input"
-                class="input"
-                accept="image/*"
-                type="file"
-                required="true"
-                multiple="true"
-                hidden="true"
-              />
-              <div class="wrapper">
-                <button type="submit" class="button">Upload</button>
-                <button type="button" class="button" onclick="init()">
-                  Start
-                </button>
-                <button type="button" class="button" onclick="predict()">
-                  품종 예측
-                </button>
-              </div>
-            </main>
-          </form>
-        </div>
-        <div class="rightbox">
-          <div>
-            <img
-              style="width: 15rem; height: 15rem"
-              id="dog_image"
-              src="{% get_media_prefix %}{{ posts.image }}"
+      <div class="leftbox">
+        <form
+          method="post"
+          action="{% url 'post:upload' %}"
+          enctype="multipart/form-data"
+        >
+          {% csrf_token %}
+          <main class="container">
+            <label class="label" id="label" for="input">
+              <div class="inner" id="inner">🐕이미지파일🐕</div>
+            </label>
+            <input
+              name="img"
+              id="input"
+              class="input"
+              accept="image/*"
+              type="file"
+              required="true"
+              multiple="true"
+              hidden="true"
             />
-          </div>
-          <div id="label-container" class="label-container"></div>
+            <div class="wrapper">
+              <button type="submit" class="button">Upload</button>
+              <button type="button" class="button" onclick="init()">
+                Start
+              </button>
+              <button type="button" class="button" onclick="predict()">
+                품종 예측
+              </button>
+            </div>
+          </main>
+        </form>
+      </div>
+      <div class="rightbox">
+        <div>
+          <img
+            style="width: 15rem; height: 15rem"
+            id="dog_image"
+            src="{% get_media_prefix %}{{ posts.image }}"
+          />
         </div>
+        <div id="label-container" class="label-container"></div>
+      </div>
     </div>
   </body>
 </html>
